@@ -1,353 +1,292 @@
-# Quick Start Guide
+# Quick Start
 
-Get up and running with OpenFrame OSS Library in just 5 minutes! This guide will walk you through creating your first device management application.
+Get OpenFrame OSS Lib up and running in 5 minutes! This guide covers the essentials to build and explore the libraries.
+
+[![OpenFrame v0.3.7 - Enhanced Developer Experience](https://img.youtube.com/vi/O8hbBO5Mym8/maxresdefault.jpg)](https://www.youtube.com/watch?v=O8hbBO5Mym8)
 
 ## TL;DR - 5-Minute Setup
 
 ```bash
-# 1. Create new Spring Boot project
-curl https://start.spring.io/starter.tgz \
-  -d dependencies=web,data-mongodb,security \
-  -d groupId=com.example \
-  -d artifactId=my-openframe-app \
-  -d packageName=com.example.openframe \
-  -d javaVersion=21 | tar -xzf -
+# 1. Clone the repository
+git clone https://github.com/flamingo-stack/openframe-oss-lib.git
+cd openframe-oss-lib
 
-cd my-openframe-app
+# 2. Build all modules
+mvn clean install
 
-# 2. Add OpenFrame dependency (build.gradle)
-echo 'implementation "com.openframe:openframe-oss-lib:latest"' >> build.gradle
+# 3. Explore the modules
+ls -la */
 
-# 3. Start MongoDB
-docker run -d --name openframe-mongo -p 27017:27017 mongo:7.0
-
-# 4. Run application
-./gradlew bootRun
+# 4. Run tests (optional)
+mvn test
 ```
 
-Your OpenFrame application is now running on `http://localhost:8080`! 🎉
+That's it! You now have all OpenFrame OSS Lib modules built and available in your local Maven repository.
 
-## Step-by-Step Setup
+## Step-by-Step Guide
 
-### Step 1: Create Spring Boot Project
-
-Using **Spring Initializr**:
+### 1. Clone the Repository
 
 ```bash
-curl https://start.spring.io/starter.tgz \
-  -d dependencies=web,data-mongodb,security,actuator \
-  -d groupId=com.example \
-  -d artifactId=openframe-demo \
-  -d packageName=com.example.openframe \
-  -d description="OpenFrame%20Demo%20Application" \
-  -d javaVersion=21 \
-  -d type=gradle-project | tar -xzf -
-
-cd openframe-demo
+git clone https://github.com/flamingo-stack/openframe-oss-lib.git
+cd openframe-oss-lib
 ```
 
-Or create manually with your IDE using these dependencies:
-- Spring Web
-- Spring Data MongoDB  
-- Spring Security
-- Spring Boot Actuator
-
-### Step 2: Add OpenFrame Dependency
-
-Add to your `build.gradle`:
-
-```gradle
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    
-    // OpenFrame OSS Library
-    implementation 'com.openframe:openframe-oss-lib:latest'
-    
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test'
-}
-```
-
-### Step 3: Configure Application
-
-Create `src/main/resources/application.yml`:
-
-```yaml
-spring:
-  application:
-    name: openframe-demo
-  
-  # MongoDB Configuration
-  data:
-    mongodb:
-      uri: mongodb://localhost:27017/openframe_demo
-      auto-index-creation: true
-  
-  # Security Configuration  
-  security:
-    user:
-      name: admin
-      password: demo123
-      
-# OpenFrame Configuration
-openframe:
-  security:
-    jwt:
-      secret: demo-jwt-secret-for-development-only-minimum-32-characters
-      expiration: 86400 # 24 hours
-    oauth:
-      enabled: false # Disable for quick start
-  
-# Enable health endpoints
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health,info
-```
-
-### Step 4: Create Basic Device Controller
-
-Create `src/main/java/com/example/openframe/controller/DeviceController.java`:
-
-```java
-package com.example.openframe.controller;
-
-import com.openframe.data.document.device.Device;
-import com.openframe.data.repository.device.MachineRepository;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
-import org.springframework.web.bind.annotation.*;
-
-import java.time.Instant;
-import java.util.List;
-
-@RestController
-@RequestMapping("/api/devices")
-public class DeviceController {
-    
-    @Autowired
-    private MachineRepository machineRepository;
-    
-    @GetMapping
-    public List<Device> getAllDevices() {
-        return machineRepository.findAll();
-    }
-    
-    @GetMapping("/{id}")
-    public Device getDevice(@PathVariable String id) {
-        return machineRepository.findById(id)
-            .orElseThrow(() -> new RuntimeException("Device not found"));
-    }
-    
-    @PostMapping
-    public Device createDevice(@RequestBody Device device) {
-        device.setLastCheckin(Instant.now());
-        return machineRepository.save(device);
-    }
-    
-    @GetMapping("/health")
-    public String health() {
-        return "OpenFrame Demo API is running!";
-    }
-}
-```
-
-### Step 5: Start Database
-
-#### Option A: Docker (Recommended)
-
-```bash
-# Start MongoDB
-docker run -d \
-  --name openframe-mongo \
-  -p 27017:27017 \
-  -e MONGO_INITDB_DATABASE=openframe_demo \
-  mongo:7.0
-
-# Verify it's running
-docker logs openframe-mongo
-```
-
-#### Option B: Local MongoDB
-
-```bash
-# Start MongoDB service
-sudo systemctl start mongod  # Linux
-brew services start mongodb-community  # macOS
-
-# Create database
-mongosh --eval "use openframe_demo"
-```
-
-### Step 6: Run Your Application
-
-```bash
-# Using Gradle Wrapper
-./gradlew bootRun
-
-# Or using Maven
-./mvnw spring-boot:run
-```
-
-Expected output:
-```text
-  .   ____          _            __ _ _
- /\\ / ___'_ __ _ _(_)_ __  __ _ \ \ \ \
-( ( )\___ | '_ | '_| | '_ \/ _` | \ \ \ \
- \\/  ___)| |_)| | | | | || (_| |  ) ) ) )
-  '  |____| .__|_| |_|_| |_\__, | / / / /
- =========|_|==============|___/=/_/_/_/
- :: Spring Boot ::               (v3.2.0)
-
-2024-01-15 10:30:00.000  INFO --- [main] o.s.b.w.embedded.tomcat.TomcatWebServer  : Tomcat started on port(s): 8080 (http)
-2024-01-15 10:30:00.000  INFO --- [main] c.e.openframe.OpenframeDemoApplication   : Started OpenframeDemoApplication in 5.234 seconds
-```
-
-## Test Your Application
-
-### 1. Check Health Endpoint
-
-```bash
-curl http://localhost:8080/api/devices/health
-```
-
-Expected response:
-```text
-OpenFrame Demo API is running!
-```
-
-### 2. Create Your First Device
-
-```bash
-curl -X POST http://localhost:8080/api/devices \
-  -H "Content-Type: application/json" \
-  -H "Authorization: Basic YWRtaW46ZGVtbzEyMw==" \
-  -d '{
-    "machineId": "demo-machine-001",
-    "serialNumber": "SN123456789",
-    "model": "Dell OptiPlex 7090",
-    "osVersion": "Ubuntu 22.04 LTS",
-    "status": "ACTIVE",
-    "type": "DESKTOP"
-  }'
-```
-
-### 3. List All Devices
-
-```bash
-curl -H "Authorization: Basic YWRtaW46ZGVtbzEyMw==" \
-  http://localhost:8080/api/devices
-```
-
-Expected response:
-```json
-[
-  {
-    "id": "65a5b8c9e4b0f123456789ab",
-    "machineId": "demo-machine-001",
-    "serialNumber": "SN123456789", 
-    "model": "Dell OptiPlex 7090",
-    "osVersion": "Ubuntu 22.04 LTS",
-    "status": "ACTIVE",
-    "type": "DESKTOP",
-    "lastCheckin": "2024-01-15T10:35:00.000Z"
-  }
-]
-```
-
-### 4. Check Application Health
-
-```bash
-curl http://localhost:8080/actuator/health
-```
-
-Expected response:
-```json
-{
-  "status": "UP",
-  "components": {
-    "mongo": {
-      "status": "UP",
-      "details": {
-        "version": "7.0.0"
-      }
-    }
-  }
-}
-```
-
-## Expected Results
-
-After completing the quick start, you'll have:
-
-✅ **Working OpenFrame Application** - Spring Boot app with OpenFrame OSS Library  
-✅ **MongoDB Integration** - Database connection and document storage  
-✅ **Device Management API** - Basic CRUD operations for devices  
-✅ **Security Configuration** - Basic authentication setup  
-✅ **Health Monitoring** - Application health endpoints  
-
-## Application Structure
-
-Your project structure should look like this:
+**What you'll see:**
 
 ```text
-openframe-demo/
-├── build.gradle
-├── src/
-│   ├── main/
-│   │   ├── java/com/example/openframe/
-│   │   │   ├── OpenframeDemoApplication.java
-│   │   │   └── controller/
-│   │   │       └── DeviceController.java
-│   │   └── resources/
-│   │       └── application.yml
-│   └── test/
-└── gradle/
+openframe-oss-lib/
+├── openframe-api-lib/                    # API contracts & DTOs
+├── openframe-api-service-core/           # Internal REST & GraphQL APIs  
+├── openframe-authorization-service-core/ # OAuth2 authorization server
+├── openframe-client-core/                # Agent lifecycle management
+├── openframe-core/                       # Shared utilities
+├── openframe-data/                       # Analytics & streaming data
+├── openframe-data-kafka/                 # Kafka event foundation
+├── openframe-data-mongo/                 # MongoDB domain & repos
+├── openframe-data-redis/                 # Redis caching layer
+├── openframe-external-api-service-core/  # Public REST APIs
+├── openframe-gateway-service-core/       # API gateway & routing
+├── openframe-management-service-core/    # Platform operations
+├── openframe-security-core/              # JWT & security utilities
+├── openframe-security-oauth/             # OAuth BFF
+├── openframe-stream-service-core/        # Real-time event processing
+├── openframe-test-service-core/          # Integration testing
+├── sdk/                                  # External tool integrations
+├── pom.xml                              # Parent POM
+└── README.md
 ```
 
-## Common Issues & Solutions
+### 2. Build the Project
 
-### Issue: "Connection refused to MongoDB"
+Build all modules with a single command:
+
 ```bash
-# Check if MongoDB is running
-docker ps | grep mongo
-# Restart if needed
-docker restart openframe-mongo
+mvn clean install
 ```
 
-### Issue: "Access denied" errors
-```bash
-# Check authentication (username: admin, password: demo123)
-echo -n "admin:demo123" | base64
-# Should output: YWRtaW46ZGVtbzEyMw==
+**Expected output:**
+
+```text
+[INFO] Scanning for projects...
+[INFO] ------------------------------------------------------------------------
+[INFO] Reactor Build Order:
+[INFO] 
+[INFO] OpenFrame OSS Libraries                                            [pom]
+[INFO] openframe-core                                                     [jar]
+[INFO] openframe-data-mongo                                               [jar]
+[INFO] openframe-data-redis                                               [jar]
+[INFO] ... (more modules)
+[INFO] 
+[INFO] ------------------------------------------------------------------------
+[INFO] BUILD SUCCESS
+[INFO] ------------------------------------------------------------------------
+[INFO] Total time: 2-4 minutes (depending on your machine)
 ```
 
-### Issue: "Port 8080 already in use"
+> **Note**: The first build will take longer as Maven downloads all dependencies. Subsequent builds are much faster.
+
+### 3. Verify the Build
+
+Check that all modules compiled successfully:
+
 ```bash
-# Find process using port
-lsof -i :8080
-# Kill if needed or change port in application.yml
+# Check build artifacts
+find . -name "*.jar" -path "*/target/*" | head -10
+
+# Verify main modules exist
+ls */target/*.jar
 ```
+
+**Expected output:**
+
+```text
+./openframe-core/target/openframe-core-5.30.0.jar
+./openframe-data-mongo/target/openframe-data-mongo-5.30.0.jar
+./openframe-api-lib/target/openframe-api-lib-5.30.0.jar
+... (more JARs)
+```
+
+### 4. Run Tests (Optional)
+
+Execute the test suite to ensure everything works:
+
+```bash
+# Run all tests
+mvn test
+
+# Or run tests for a specific module
+cd openframe-core
+mvn test
+```
+
+## Exploring the Modules
+
+### Core Library Structure
+
+The project follows a layered architecture. Here are the key modules to explore:
+
+```mermaid
+flowchart TD
+    Core["`**openframe-core**
+    Shared utilities`"]
+    
+    Data["`**openframe-data-mongo**  
+    Domain models`"]
+    
+    API["`**openframe-api-lib**
+    API contracts`"] 
+    
+    Security["`**openframe-security-core**
+    JWT & auth utilities`"]
+    
+    Gateway["`**openframe-gateway-service-core**
+    API gateway`"]
+    
+    Core --> Data
+    Core --> Security
+    Data --> API
+    Security --> Gateway
+    API --> Gateway
+```
+
+### Examine Module Contents
+
+```bash
+# Core utilities and shared components
+ls openframe-core/src/main/java/com/openframe/core/
+
+# MongoDB domain models and repositories  
+ls openframe-data-mongo/src/main/java/com/openframe/data/document/
+
+# API contracts and DTOs
+ls openframe-api-lib/src/main/java/com/openframe/api/dto/
+
+# Security configuration
+ls openframe-security-core/src/main/java/com/openframe/security/
+```
+
+## Understanding the Build
+
+### Maven Reactor
+
+OpenFrame OSS Lib uses Maven's multi-module reactor build. The parent POM (`pom.xml`) defines:
+
+- **Shared properties**: Java 21, Spring Boot 3.3.0, library versions
+- **Module ordering**: Ensures dependencies build before dependents  
+- **Common dependencies**: Lombok, Spring Boot, testing frameworks
+- **Build plugins**: Source generation, flattening for CI/CD
+
+### Key Dependencies
+
+The project uses these major dependencies:
+
+| Technology | Version | Purpose |
+|------------|---------|---------|
+| **Spring Boot** | 3.3.0 | Application framework |
+| **Java** | 21 | Runtime platform |
+| **Spring Cloud** | 2023.0.3 | Gateway and service discovery |
+| **Spring Data MongoDB** | 4.2.0 | Database integration |
+| **JJWT** | 0.11.5 | JWT processing |
+| **Apache Pinot** | 1.2.0 | Analytics database |
+| **NATS** | 0.6.2+3.5 | Messaging system |
+
+## Quick Architecture Tour
+
+### 1. Core Utilities (`openframe-core`)
+
+```bash
+# Explore shared utilities
+find openframe-core/src -name "*.java" | head -5
+```
+
+**Purpose**: Validation, error handling, encryption, pagination utilities used across all modules.
+
+### 2. Data Layer (`openframe-data-mongo`)
+
+```bash  
+# Check domain documents
+ls openframe-data-mongo/src/main/java/com/openframe/data/document/
+```
+
+**Purpose**: MongoDB entities like User, Organization, Device, OAuth clients with repositories.
+
+### 3. API Contracts (`openframe-api-lib`)
+
+```bash
+# Browse API DTOs  
+ls openframe-api-lib/src/main/java/com/openframe/api/dto/
+```
+
+**Purpose**: Request/response DTOs, filters, and mappers that define API contracts.
+
+### 4. Security (`openframe-security-core`)
+
+```bash
+# Security components
+ls openframe-security-core/src/main/java/com/openframe/security/
+```
+
+**Purpose**: JWT handling, authentication utilities, PKCE support for OAuth2.
 
 ## Next Steps
 
-🎉 **Congratulations!** You've successfully created your first OpenFrame application.
+Congratulations! You've successfully built OpenFrame OSS Lib. Here's what to explore next:
 
-Continue your journey:
+### Immediate Next Steps
 
-1. **[First Steps](./first-steps.md)** - Explore key OpenFrame features
-2. **[Development Guide](../development/README.md)** - Learn about architecture and best practices  
-3. **[API Reference](../reference/architecture/overview.md)** - Comprehensive API documentation
+1. **[First Steps Guide](first-steps.md)** - Learn key concepts and explore features
+2. **[Local Development Setup](../development/setup/local-development.md)** - Set up a full development environment
+3. **[Architecture Overview](../development/architecture/README.md)** - Understand the system design
 
-## Need Help?
+### Deep Dives
 
-- 💬 **Community**: [OpenMSP Slack](https://join.slack.com/t/openmsp/shared_invite/zt-36bl7mx0h-3~U2nFH6nqHqoTPXMaHEHA)
-- 📚 **Documentation**: [Development Guide](../development/README.md)
-- 🚀 **Platform**: [OpenFrame.ai](https://openframe.ai)
+- **API Development**: Start with `openframe-api-service-core` REST controllers
+- **Security**: Explore OAuth2 flows in `openframe-authorization-service-core`  
+- **Data Integration**: Study MongoDB repositories in `openframe-data-mongo`
+- **Gateway Configuration**: Review routing in `openframe-gateway-service-core`
 
-Ready to build amazing device management solutions with OpenFrame! 🚀
+### Sample Integration
+
+Try building a simple application using the libraries:
+
+```bash
+# Create a new Spring Boot project
+# Add openframe-api-lib as a dependency  
+# Explore the DTOs and services available
+```
+
+## Troubleshooting
+
+### Build Failures
+
+**OutOfMemoryError:**
+```bash
+export MAVEN_OPTS="-Xmx4096m -XX:MaxPermSize=512m"
+mvn clean install
+```
+
+**Compilation Errors:**
+- Ensure Java 21 is active: `java -version`
+- Clear Maven cache: `rm -rf ~/.m2/repository`
+- Rebuild: `mvn clean install`
+
+**Test Failures:**
+```bash  
+# Skip tests if needed for initial exploration
+mvn clean install -DskipTests
+```
+
+### Common Issues
+
+- **Lombok not working**: Install IDE plugin and enable annotation processing
+- **Module not found**: Check module names match directory structure
+- **Version conflicts**: The parent POM manages all versions centrally
+
+## Getting Help
+
+- **OpenMSP Community**: [Join our Slack](https://join.slack.com/t/openmsp/shared_invite/zt-36bl7mx0h-3~U2nFH6nqHqoTPXMaHEHA)
+- **Documentation Issues**: Check the generated documentation in each module
+- **Build Problems**: Review Maven output for specific error details
+
+You're now ready to dive deeper into OpenFrame OSS Lib development!
